fix: change z-index & apply ref on useOnClickOutside

--- a/packages/mz-client/src/styles/BottomSheetModal.module.scss
+++ b/packages/mz-client/src/styles/BottomSheetModal.module.scss
@@ -8,6 +8,7 @@
   width: 100%;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  z-index: 6;
 }
 
 .items {
