--- a/packages/mz-client/src/styles/CommentInputOverlay.module.scss
+++ b/packages/mz-client/src/styles/CommentInputOverlay.module.scss
@@ -8,6 +8,7 @@
   background: white;
   display: flex;
   align-items: center;
+  z-index: 6;
 }
 
 .input {
